--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="add-item">
+    <div id="add-item">
       <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button>Add</button>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
+      </div>
     </div>
-    </p>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li>
