--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="more-link"><img src="./eisenhower-matrix.jpg"><a class="more-inf"
+  <div class="more-link"><img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
@@ -26,14 +26,14 @@
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
       <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -43,7 +43,7 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
     </ul>
   </div>
