--- a/index.html
+++ b/index.html
@@ -8,42 +8,43 @@
 </head>
 
 <body>
-  <div class="more-link"><img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf"
+  <div class="more-link">
+    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf more-link__more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <div id="add-item">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <div class="todo-container">
+    <div class="add-item" id="add-item">
+      <label class="add-item__label" for="new-task">Add Item</label>
+      <div class="task-row-wrapper tadd-item__task-row">
+        <input id="new-task" class="task add-item__input" type="text">
+        <button class="add-item__button">Add</button>
       </div>
     </div>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
+    <h3 class="todo-container__heading">Todo</h3>
+    <ul class="incomplete-tasks" id="incomplete-tasks">
+      <li class="incomplete-tasks__list-item">
+        <input class="incomplete-tasks__input" type="checkbox">
+        <label class="incomplete-tasks__label task">Pay Bills</label>
+        <input type="text" class="task incomplete-tasks__input">
+        <button class="edit incomplete-tasks__button">Edit</button>
+        <button class="delete incomplete-tasks__button"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
+      <li class="edit-mode incomplete-tasks__list-item_edit">
+        <input class="incomplete-tasks__input" type="checkbox">
+        <label class="task incomplete-tasks__label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task incomplete-tasks__input">
+        <button class="edit incomplete-tasks__button">Save</button>
+        <button class="delete incomplete-tasks__button"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove-icon"></button>
+    <h3 class="todo-container__heading">Completed</h3>
+    <ul class="completed-tasks" id="completed-tasks">
+      <li class="completed-tasks__list-item">
+        <input class="completed-tasks__input" type="checkbox" checked>
+        <label class="task completed-tasks__label">See the Doctor</label>
+        <input type="text" class="task completed-tasks__input">
+        <button class="edit completed-tasks__button">Edit</button>
+        <button class="delete completed-tasks__button"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
     </ul>
   </div>
