feat: add BEM for buttons

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
         <label class="incomplete-tasks__label task">Pay Bills</label>
         <input type="text" class="task incomplete-tasks__input">
         <button class="edit incomplete-tasks__button">Edit</button>
-        <button class="delete incomplete-tasks__button"><img src="./remove.svg" class="remove-icon" alt="remove-icon"></button>
+        <button class="delete incomplete-tasks__button"><img src="./remove.svg" class="remove-icon"
+            alt="remove-icon"></button>
       </li>
       <li class="edit-mode incomplete-tasks__list-item_edit">
         <input class="incomplete-tasks__input" type="checkbox">
         <label class="task incomplete-tasks__label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task incomplete-tasks__input">
         <button class="edit incomplete-tasks__button">Save</button>
-        <button class="delete incomplete-tasks__button"><img src="./remove.svg" class="remove-icon" alt="remove-icon"></button>
+        <button class="delete incomplete-tasks__button"><img src="./remove.svg" class="remove-icon"
+            alt="remove-icon"></button>
       </li>
     </ul>
     <h3 class="todo-container__heading">Completed</h3>
@@ -44,7 +46,7 @@
         <label class="task completed-tasks__label">See the Doctor</label>
         <input type="text" class="task completed-tasks__input">
         <button class="edit completed-tasks__button">Edit</button>
-        <button class="delete completed-tasks__button"><img src="./remove.svg" class="remove-icon" alt="remove-icon"></button>
+        <button class="delete completed-tasks__button"><img src="./remove.svg" alt="remove-icon"></button>
       </li>
     </ul>
   </div>
