--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
+<body class="body">
   <div class="more-link">
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf more-link__more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -46,7 +46,7 @@
         <label class="task completed-tasks__label">See the Doctor</label>
         <input type="text" class="task completed-tasks__input">
         <button class="edit completed-tasks__button">Edit</button>
-        <button class="delete completed-tasks__button"><img src="./remove.svg" alt="remove-icon"></button>
+        <button class="delete completed-tasks__button"><img src="./remove.svg" class="remove-icon" alt="remove-icon"></button>
       </li>
     </ul>
   </div>
